# ZephyrSense

./: .gitignore  CMakeLists.txt  Main.qml  build_installer.bat  main.cpp
qml/components/: ConnectionPanel.qml  ConnectionTab.qml  DateTimePicker.qml  DisplayTab.qml  ExportTab.qml  ModeBadge.qml  NavigationDrawer.qml  RadialBarGauge.qml  SensorLegend.qml  SensorMarker.qml  ThresholdsTab.qml  TimeSeriesChart.qml
qml/views/: DashboardView.qml  GraphsView.qml  MapView.qml  SettingsView.qml
src/core/: sensorreading.cpp  sensorreading.h  thresholdmanager.cpp  thresholdmanager.h
src/data/: csvexporter.cpp  csvexporter.h  databasemanager.cpp  databasemanager.h
src/models/: sensorreadingmodel.cpp  sensorreadingmodel.h  timeserieschartmodel.cpp  timeserieschartmodel.h
src/serial/: serialhandler.cpp  serialhandler.h
